      rather than "Fleet". Also no ship list is displayed for them.
   -- implemented ENTER NEW <alias>. New fleets created during GIVE orders are now given aliases that
      may be specified in an Enter order.	
   -- implemented handling of ship items in spoils
   -- prevented ship items from being PRODUCED
   -- updated the skillshows and itemshows to handle ship items properly
   -- added the STUDY [skill] [level] option for repeated study. STUDY is no longer useable with the
      '@' symbol as a repeating order  
   -- moved EmptyHell() to Game:RunGame() to prevent dead mages bug with IMPROVED_FARSIGHT.
   -- added an IsAlive() check to Unit::CanReallySwim() to prevent newly formed units from LEAVING
      a ship and then drowning during give.
   -- fixed bug where clear skies didn't affect sailing cost.
   -- added REQUIRED_EXPERIENCE. Units have their study rate (in normal games always 30 days per
      month no matter what) adjusted when they have significantly less or much more experience
      than days of study. (Currently still using the old Practice mechanism to gain experience)
   -- fixed a number of issues: a bug where products and markets weren't updated, the gold 
      amount for earth lore was adjusted to the new wagesystem, item reporting now prevents double
      posting of items, and CountTaxers includes a fix that prevents bugs when an IT_MAN item is
      a mount, weapon or other, tax-relevant item at the same time (centaurs in fracas game).
   -- fixed the bug with BUILD orders without an object given
   -- added Christopher Allen's changes to the GAMEMASTER file regarding Dev-C++
   -- applied Max Shariy's patch for replacing i_rand.c with i_rand.cpp
   -- fixed the flying flag for fleets to enable flying movement.
   -- modified the ship type items and replaced clippers and galleons with more suitable
      alternatives. They are not balanced or all included yet for compatibility with currently
      running test games.
   